
bin_PROGRAMS = \
	OISPControl_keyb

OISPControl_keyb_SOURCES = \
	main.cpp \
	OICFControlListenerProviderImpl.cpp \
	OICFControlListenerProviderImpl.h 

OISPControl_keyb_LDADD = \
        $(PROFILING_LIBS) \
        $(DBUSMM_LIBS) \
        $(DBUSMMGLIB_LIBS) \
        $(SIGC_LIBS) \
        $(GLIBMM_LIBS) \
        $(GTK_LIBS) \
        $(OICFPROVIDER_LIBS)

OISPControl_keyb_CXXFLAGS = \
        $(PROFILING_CFLAGS) \
        $(DBUSMM_CFLAGS) \
        $(DBUSMMGLIB_CFLAGS) \
        $(SIGC_CFLAGS) \
        $(GLIBMM_CFLAGS) \
        $(GTK_CFLAGS) \
        $(OICFPROVIDER_CFLAGS)


## File created by the gnome-build tools

